feat(goserver): return list of roommates
